--- a/public/404.html
+++ b/public/404.html
@@ -68,12 +68,12 @@
 
   <!-- Main Stylesheet -->
   
-  <link rel="stylesheet" href="//localhost:1313/scss/main.min.css?v=%2010-09-2024-1019-279-96" media="screen">
+  <link rel="stylesheet" href="//localhost:1313/scss/main.min.css?v=%2010-09-2024-1030-39-96" media="screen">
    <!-- plugins --> 
   
   <!-- Custom Stylesheet -->
   
-  <link rel="stylesheet" href="//localhost:1313/scss/custom.min.css?v=%2010-09-2024-1019-279-96"
+  <link rel="stylesheet" href="//localhost:1313/scss/custom.min.css?v=%2010-09-2024-1030-39-96"
     media="screen">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -110,7 +110,7 @@
 
 <a class="logo" href="./">
    
-   <img src=" /images/logo.svg " alt="FigamLand" >
+   <img src=" /images/logo.svg " alt="Prizma" >
    
    
 </a><h1>404</h1>
@@ -203,7 +203,7 @@
         <div class="footer__top">
             <div class="container">
 
-            FigamLand invest © 2024
+            Prizma invest © 2024
 
 
             <nav class="footer__nav">
@@ -258,7 +258,7 @@
 
 
   
-  <script src="//localhost:1313/js/script.min.js?v=10-09-2024-1019-279-96"></script><svg width="0" height="0" class="hidden">
+  <script src="//localhost:1313/js/script.min.js?v=10-09-2024-1030-39-96"></script><svg width="0" height="0" class="hidden">
   <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 16" id="arr-lt">
     <path d="M27.7071 8.91121C28.0976 8.52068 28.0976 7.88752 27.7071 7.49699L21.3431 1.13303C20.9526 0.742509 20.3195 0.742509 19.9289 1.13303C19.5384 1.52356 19.5384 2.15672 19.9289 2.54725L25.5858 8.2041L19.9289 13.861C19.5384 14.2515 19.5384 14.8846 19.9289 15.2752C20.3195 15.6657 20.9526 15.6657 21.3431 15.2752L27.7071 8.91121ZM0 9.2041H27V7.2041H0V9.2041Z" fill="#9353FF"></path>
   </symbol>
